mcp-macros/tests/ui/mcp_server_invalid_auth.stderr
error: Invalid auth parameter: 'invalid'. Valid options are: 'memory', 'file', 'disabled', or omit for no auth
 --> tests/ui/mcp_server_invalid_auth.rs:5:1
  |
5 | #[mcp_server(name = "Test Server", auth = "invalid")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `mcp_server` (in Nightly builds, run with -Z macro-backtrace for more info)
